--- a/index.html
+++ b/index.html
@@ -2,258 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Connect Wallet - MAITRIX Style</title>
-  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-  <script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KenariCoin Wallet Connect</title>
+  <script src="https://cdn.jsdelivr.net/npm/web3@1.10.0/dist/web3.min.js"></script>
   <style>
-    body {
-      background: #000;
-      color: #0f0;
-      font-family: monospace;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-    }
-    h2 { margin-top: 40px; }
-    button {
-      background: #111;
-      color: #0f0;
-      border: 1px solid #0f0;
-      padding: 10px 20px;
-      cursor: pointer;
-      border-radius: 12px;
-      font-size: 14px;
-      margin-top: 40px;
-      transition: all 0.2s;
-    }
-    button:hover {
-      background: #0f0;
-      color: #000;
-    }
-    /* Modal Overlay */
-    #walletModal {
-      display: none;
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.85);
-      z-index: 1000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    /* Modal Box */
-    .modal-box {
-      background: #111;
-      padding: 20px;
-      border-radius: 16px;
-      width: 320px;
-      box-shadow: 0 0 20px #0f0;
-      animation: pop 0.25s ease;
-    }
-    @keyframes pop {
-      from { transform: scale(0.9); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
-    }
-    .modal-box h3 {
-      color: #0f0;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    .wallet-btn {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background: #222;
-      border: 1px solid #0f0;
-      padding: 10px 14px;
-      border-radius: 12px;
-      margin-bottom: 12px;
-      cursor: pointer;
-      transition: all 0.2s;
-    }
-    .wallet-btn:hover {
-      background: #0f0;
-      color: #000;
-    }
-    .badge {
-      font-size: 11px;
-      background: #0f0;
-      color: #000;
-      border-radius: 6px;
-      padding: 2px 6px;
-    }
-    .close-btn {
-      text-align: center;
-      background: #400;
-      border: 1px solid #f00;
-      color: #f00;
-    }
-    .close-btn:hover {
-      background: #f00;
-      color: #fff;
-    }
-    .disconnect-btn {
-      margin-top: 12px;
-      background: #222;
-      border: 1px solid #f00;
-      color: #f00;
-      padding: 8px 14px;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-    .disconnect-btn:hover {
-      background: #f00;
-      color: #fff;
-    }
+    body { background: #0b0f19; color: #fff; font-family: Arial, sans-serif; text-align: center; padding: 40px; }
+    .btn { background: #00ff99; color: #000; padding: 12px 20px; border-radius: 8px; cursor: pointer; font-weight: bold; border: none; }
+    .btn:hover { background: #00cc77; }
+    #walletInfo { margin-top: 20px; padding: 15px; background: #111827; border-radius: 10px; display: none; }
   </style>
 </head>
 <body>
-  <h2>MAITRIX Style Connect Wallet</h2>
-  <button id="openModal">🔗 Connect Wallet</button>
+  <h1>🚀 KenariCoin Wallet Connect</h1>
 
-  <!-- Modal Custom -->
-  <div id="walletModal">
-    <div class="modal-box">
-      <h3>Connect Wallet</h3>
-      <div class="wallet-btn" onclick="connectMetaMask()">🦊 MetaMask</div>
-      <div class="wallet-btn" onclick="connectWalletConnect()">🌐 WalletConnect</div>
-      <div class="wallet-btn" onclick="connectTrustWallet()">🔵 Trust Wallet</div>
-      <div class="wallet-btn" onclick="openAllWallets()">
-        📱 All Wallets <span class="badge">530+</span>
-      </div>
-      <div class="wallet-btn close-btn" onclick="closeModal()">❌ Close</div>
-    </div>
-  </div>
+  <button class="btn" onclick="openAllWallets()">🔗 Connect All Wallets</button>
+  <div id="walletInfo"></div>
 
-  <div id="walletInfo" style="margin-top:20px; color:#fff;"></div>
+  <script type="module">
+    import { Web3Modal } from "https://esm.sh/@web3modal/html@2.7.1"
+    import { EthereumClient, w3mConnectors, w3mProvider } from "https://esm.sh/@web3modal/ethereum@2.7.1"
+    import { configureChains, createConfig, getAccount } from "https://esm.sh/@wagmi/core@1.3.6"
+    import { mainnet } from "https://esm.sh/@wagmi/core/chains"
 
-  <!-- Web3Modal Standalone -->
-  <script src="https://unpkg.com/@web3modal/standalone@2.7.1/dist/index.umd.js"></script>
+    // Gunakan BSC chain
+    const bsc = {
+      id: 56,
+      name: "BNB Smart Chain",
+      network: "bsc",
+      nativeCurrency: { name: "BNB", symbol: "BNB", decimals: 18 },
+      rpcUrls: { default: { http: ["https://bsc-dataseed.binance.org/"] } },
+      blockExplorers: { default: { name: "BscScan", url: "https://bscscan.com" } }
+    }
 
-  <script>
-    // Konfigurasi BSC
-    const BSC_CHAIN = {
-      chainId: '0x38',
-      chainName: 'BNB Smart Chain',
-      nativeCurrency: { name: 'BNB', symbol: 'BNB', decimals: 18 },
-      rpcUrls: ['https://bsc-dataseed.binance.org/'],
-      blockExplorerUrls: ['https://bscscan.com/']
-    };
+    const projectId = "04d95c797b104ad69d34f7e2feccf794"
 
-    // State
-    let currentProvider = null;
-    let currentAccount = null;
+    // Konfigurasi chains
+    const { publicClient } = configureChains([bsc], [w3mProvider({ projectId })])
 
-    // Modal custom handler
-    const modal = document.getElementById("walletModal");
-    document.getElementById("openModal").onclick = ()=> modal.style.display="flex";
-    function closeModal(){ modal.style.display="none"; }
+    const wagmiConfig = createConfig({
+      autoConnect: true,
+      connectors: w3mConnectors({ projectId, chains: [bsc] }),
+      publicClient
+    })
 
-    // Helper: switch/add BSC
-    async function switchToBSC(provider){
-      if(!provider) return;
-      try {
-        await provider.request({
-          method: 'wallet_switchEthereumChain',
-          params: [{ chainId: BSC_CHAIN.chainId }]
-        });
-      } catch (err) {
-        if (err.code === 4902) {
-          await provider.request({
-            method: 'wallet_addEthereumChain',
-            params: [BSC_CHAIN]
-          });
+    const ethereumClient = new EthereumClient(wagmiConfig, [bsc])
+
+    // Buat modal resmi (All Wallets jalan)
+    window.web3Modal = new Web3Modal(
+      {
+        projectId,
+        themeMode: "dark",
+        themeVariables: {
+          "--w3m-accent-color": "#00ff99",
+          "--w3m-background-color": "#1a1f2e"
         }
-      }
-    }
+      },
+      ethereumClient
+    )
 
-    function showWalletInfo(name, account){
-      currentAccount = account;
-      document.getElementById("walletInfo").innerHTML = `
-        ✅ Connected with <b>${name}</b>: ${account}
-        <br><button class="disconnect-btn" onclick="disconnectWallet()">Disconnect</button>
-      `;
-    }
+    // Fungsi tombol
+    window.openAllWallets = async function () {
+      window.web3Modal.openModal()
 
-    // Disconnect
-    async function disconnectWallet(){
-      if(currentProvider && currentProvider.close){
-        await currentProvider.close();
-      }
-      currentProvider = null;
-      currentAccount = null;
-      document.getElementById("walletInfo").innerHTML = "❌ Wallet disconnected";
-    }
-
-    // MetaMask connect
-    async function connectMetaMask(){
-      if(window.ethereum){
-        try{
-          await switchToBSC(window.ethereum);
-          const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-          currentProvider = window.ethereum;
-          showWalletInfo("MetaMask (BSC)", accounts[0]);
-          closeModal();
-        }catch(e){ console.error(e); }
-      }else{
-        alert("MetaMask not installed!");
-      }
-    }
-
-    // WalletConnect connect
-    async function connectWalletConnect(){
-      const provider = new WalletConnectProvider.default({
-        rpc: { 56: "https://bsc-dataseed.binance.org/" }
-      });
-      await provider.enable();
-      await switchToBSC(provider);
-      const web3 = new Web3(provider);
-      const accounts = await web3.eth.getAccounts();
-      currentProvider = provider;
-      showWalletInfo("WalletConnect (BSC)", accounts[0]);
-      closeModal();
-    }
-
-    // Trust Wallet (pakai WalletConnect)
-    async function connectTrustWallet(){
-      return connectWalletConnect();
-    }
-
-    // === Web3Modal Standalone ===
-    const projectId = "04d95c797b104ad69d34f7e2feccf794";
-    const web3Modal = new window.Web3Modal.StandaloneWeb3Modal({
-      projectId,
-      themeMode: "dark",
-      themeVariables: { "--w3m-accent-color": "#0f0" },
-      defaultChain: {
-        chainId: 56,
-        name: "BNB Smart Chain",
-        rpcUrl: "https://bsc-dataseed.binance.org/"
-      }
-    });
-
-    // All Wallets
-    async function openAllWallets(){
-      try {
-        // buka modal Web3Modal
-        web3Modal.openModal();
-
-        // listen event connect
-        web3Modal.subscribeEvents((event) => {
-          if (event.name === "CONNECT_SUCCESS") {
-            const provider = event.data.provider;
-            currentProvider = provider;
-            const web3 = new Web3(provider);
-            web3.eth.getAccounts().then((accounts) => {
-              showWalletInfo("All Wallets (BSC)", accounts[0]);
-              closeModal();
-            });
-          }
-        });
-      } catch (e) {
-        console.error(e);
-        alert("❌ Gagal connect via All Wallets");
-      }
+      // listen account change
+      wagmiConfig.subscribe((state) => {
+        const acc = getAccount(wagmiConfig)
+        if (acc?.address) {
+          document.getElementById("walletInfo").style.display = "block"
+          document.getElementById("walletInfo").innerHTML =
+            `✅ Connected to <b>${acc.address}</b> on BSC`
+        }
+      })
     }
   </script>
 </body>
