--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
   <div id="walletInfo"></div>
 
   <script type="module">
-    import { Web3Modal } from "https://esm.sh/@web3modal/html@2.7.1"
-    import { EthereumClient, w3mConnectors, w3mProvider } from "https://esm.sh/@web3modal/ethereum@2.7.1"
-    import { configureChains, createConfig, getAccount } from "https://esm.sh/@wagmi/core@1.3.6"
-    import { mainnet } from "https://esm.sh/@wagmi/core/chains"
+    import { Web3Modal } from "https://cdn.jsdelivr.net/npm/@web3modal/html@2.7.1/dist/index.umd.js"
+    import { EthereumClient, w3mConnectors, w3mProvider } from "https://cdn.jsdelivr.net/npm/@web3modal/ethereum@2.7.1/dist/index.umd.js"
+    import { configureChains, createConfig, getAccount, watchAccount } from "https://cdn.jsdelivr.net/npm/@wagmi/core@1.3.6/dist/index.umd.js"
 
-    // Gunakan BSC chain
+    // === BSC Chain Config ===
     const bsc = {
       id: 56,
       name: "BNB Smart Chain",
@@ -36,7 +35,7 @@
 
     const projectId = "04d95c797b104ad69d34f7e2feccf794"
 
-    // Konfigurasi chains
+    // Wagmi setup
     const { publicClient } = configureChains([bsc], [w3mProvider({ projectId })])
 
     const wagmiConfig = createConfig({
@@ -47,7 +46,7 @@
 
     const ethereumClient = new EthereumClient(wagmiConfig, [bsc])
 
-    // Buat modal resmi (All Wallets jalan)
+    // Web3Modal resmi
     window.web3Modal = new Web3Modal(
       {
         projectId,
@@ -63,17 +62,18 @@
     // Fungsi tombol
     window.openAllWallets = async function () {
       window.web3Modal.openModal()
+    }
 
-      // listen account change
-      wagmiConfig.subscribe((state) => {
-        const acc = getAccount(wagmiConfig)
-        if (acc?.address) {
+    // Update info kalau wallet connect
+    watchAccount(wagmiConfig, {
+      onChange(account) {
+        if (account?.address) {
           document.getElementById("walletInfo").style.display = "block"
           document.getElementById("walletInfo").innerHTML =
-            `✅ Connected to <b>${acc.address}</b> on BSC`
+            `✅ Connected: <b>${account.address}</b> (BSC)`
         }
-      })
-    }
+      }
+    })
   </script>
 </body>
 </html>
