--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <header>
     <div class="logo">Kenari<span>Coin</span></div>
     <nav class="nav-links" id="navLinks">
-      <a href="#home">Home</a>
-      <a href="#staking">Staking</a>
-      <a href="#leaderboard">Leaderboard</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
+  <a href="#home">Home</a>
+  <a href="#staking">Staking</a>
+  <a href="#wallet">Wallet</a> <!-- Tambahan -->
+  <a href="#leaderboard">Leaderboard</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+</nav>
     <div class="hamburger" id="hamburger">&#9776;</div>
   </header>
 
