--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
       <div class="wallet-input">
         <input type="text" id="walletAddress" placeholder="Paste your wallet address">
       </div>
+      <!-- WALLET -->
+<section id="wallet" class="page-section">
+  <h2>Your Wallet</h2>
+  <div class="wallet-box">
+    <input type="text" id="walletInput" placeholder="Paste wallet address">
+    <button onclick="loadWallet()">Check Wallet</button>
+    <div id="walletInfo" class="wallet-info">
+      <!-- Saldo akan muncul di sini -->
+    </div>
 
       <div class="swap-box">
         <h3>Swap</h3>
