--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <div id="walletInfo" class="wallet-info">
       <!-- Saldo akan muncul di sini -->
     </div>
+  </div>
+</section>
 
       <div class="swap-box">
         <h3>Swap</h3>
