--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- HOME -->
   <section id="home" class="page-section active">
     <div class="home-container">
-      <img src="img/kn-logo.png" alt="Kenari Coin Logo" class="home-logo">
+      <img src="img/Logo.png" alt="Kenari Coin Logo" class="home-logo">
       <h1>Welcome to Kenari Coin</h1>
       <p>Revolutionary community-driven cryptocurrency.</p>
     </div>
