--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 
   <!-- LEADERBOARD -->
   <section id="leaderboard" class="page-section">
-    <h2>Leaderboard</h2>
-    <p>Coming soon...</p>
-  </section>
+  <h2>🏆 Leaderboard Staking</h2>
+  <div id="leaderboardList"></div>
+</section>
 
   <!-- ABOUT -->
   <section id="about" class="page-section">
