--- a/index.html
+++ b/index.html
@@ -86,13 +86,20 @@
     <div id="walletInfo" class="wallet-info"></div>
   </section>
 
-  <!-- FAUCET -->
-  <section id="faucet" class="page-section">
-    <h2>Faucet</h2>
-    <p>Claim 100 KN every 24 hours</p>
-    <button onclick="claimFaucet()">Claim Faucet</button>
+<!-- FAUCET -->
+<section id="faucet" class="page-section">
+  <h2>Faucet</h2>
+  <p>Claim 100 KN every 24 hours</p>
+  <div class="form-box">
+    <input 
+      type="text" 
+      id="faucetAddressInput" 
+      placeholder="Paste your BSC Testnet wallet address (0x...)" 
+    />
+    <button id="claimFaucetBtn" onclick="claimFaucet()">Claim Faucet</button>
     <p id="faucetResult"></p>
-  </section>
+  </div>
+</section>
 
   <!-- LEADERBOARD -->
   <section id="leaderboard" class="page-section">
