--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <input type="number" id="swapAmount" placeholder="Amount">
       <button onclick="swapTokens()">Swap</button>
       <p id="swapResult"></p>
+      <p id="swapPriceInfo"></p>
     </div>
 
     <!-- Staking -->
